@@ -29,6 +29,9 @@ class TurnitinAPI {
     private $proxypassword;
     private $proxybypass;
     private $sslcertificate;
+    
+    private $istestingconnection;
+    private $perflog;
 
     private $personwsdl;
     private $coursesectionwsdl;
@@ -64,6 +67,9 @@ class TurnitinAPI {
         $this->apibaseurl = $apibaseurl;
         $this->integrationid = $integrationid;
         $this->language   = $language;
+
+        $this->istestingconnection = false;
+        $this->perflog = null;
 
         $this->personwsdl = dirname(__FILE__).'/wsdl/lis-person.wsdl';
         $this->coursesectionwsdl = dirname(__FILE__).'/wsdl/lis-coursesection.wsdl';
@@ -199,6 +205,42 @@ class TurnitinAPI {
     }
 
     /**
+     * Get testing connection flag
+     *
+     * @return boolean
+     */
+    public function getIsTestingConnection() {
+        return $this->istestingconnection;
+    }
+
+    /**
+     * Set testing connection flag
+     *
+     * @param boolean $istestingconnection
+     */
+    public function setIsTestingConnection($istestingconnection) {
+        $this->istestingconnection = $istestingconnection;
+    }
+
+    /**
+     * Get logger for performance data
+     *
+     * @return PerfLog
+     */
+    public function getPerflog() {
+        return $this->perflog;
+    }
+
+    /**
+     * Set logger for performance data
+     *
+     * @param PerfLog $perflog
+     */
+    public function setPerflog($perflog) {
+        $this->perflog = $perflog;
+    }
+
+    /**
      * Get SDK Version
      *
      * Get the current release version of the SDK
@@ -290,6 +332,8 @@ class TurnitinAPI {
         if ((isset($this->sslcertificate)) AND ($this->sslcertificate != '')) {
             $service->setSSLCertificate( $this->sslcertificate );
         }
+        $service->setIsTestingConnection($this->istestingconnection);
+        $service->setPerflog($this->perflog);
         return $service;
     }
 
